tests/NormalTests/paczka1/fuzzy1/79351169.err
Error in line 5: fkY S0 7,2
Error in line 8: fkY S0 20,4
Error in line 12: ?S0
Error in line 13: ?S0
Error in line 17: cXeM1W4M S0 94,1
Error in line 23: nuA S0 94,0
Error in line 24: nuA S0 -1,1
Error in line 29: fkY S0 82,8
Error in line 18: nuA A517 90,4
Error in line 31: S0 S435 37,9
Error in line 37: nuA S0 97,4
Error in line 38: nuA S0 10,7
